# backup-remote-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
ansible/playbooks/: create_db.yml  create_db_local.yml  init.yml  setup.yml
ansible/tasks/: create_container.yml  create_containers.yml  init_db.yml
postgres/: 2021-07-25_create_db.sql
src/: lib.rs  main.rs
src/aws/: aws_archive.rs  aws_glacier.rs  aws_job.rs  aws_vault.rs  mod.rs
src/aws_glacier/: mod.rs
src/model/: mod.rs
src/repo/: mod.rs  repo_archive.rs  repo_job.rs  repo_vault.rs
