[package]
name = "backup-remote-rs"
version = "0.1.0"
edition = "2018"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
description = "a tool for managing backups on AWS Glacier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ring = { version = "0", features = ["std"] }
data-encoding = "2"
hyper = { version = "0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0"
chrono = "0"
clap = "2"
