[package]
name = "backup-remote-rs"
version = "0.1.0"
edition = "2018"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
description = "a tool for managing backups on AWS Glacier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ring = { version = "0", features = ["std"] }
data-encoding = "2"
hyper = { version = "0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0"
chrono = { version = "0", features = ["serde"] }
clap = "2"
tokio-postgres = { version = "0", features = ["with-uuid-0_8", "with-chrono-0_4"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
serde_json = "1"
log = "0"
env_logger = "0"
